--- a/style.css
+++ b/style.css
@@ -33,10 +33,8 @@ footer {
     box-shadow: -6px -6px 300px -21px rgba(255, 255, 255, 1);
 }
 
-.datenschutztext {
-    color: rgb(188, 188, 188);
-    padding-left: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+.pfooter {
+    padding: 0 0 1% 5%;
 }
 
 a {
